; ModuleID = '/home/carl/AnghaBench/libgit2/tests/config/extr_global.c_test_config_global__initialize.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/config/extr_global.c_test_config_global__initialize.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32 }

@GIT_BUF_INIT = common dso_local global %struct.TYPE_5__ zeroinitializer, align 4
@.str = private unnamed_addr constant [5 x i8] c"home\00", align 1
@GIT_OPT_SET_SEARCH_PATH = common dso_local global i32 0, align 4
@GIT_CONFIG_LEVEL_GLOBAL = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [8 x i8] c"xdg/git\00", align 1
@GIT_CONFIG_LEVEL_XDG = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [4 x i8] c"etc\00", align 1
@GIT_CONFIG_LEVEL_SYSTEM = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_config_global__initialize() #0 {
  %1 = alloca %struct.TYPE_5__, align 4
  %2 = bitcast %struct.TYPE_5__* %1 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %2, i8* align 4 bitcast (%struct.TYPE_5__* @GIT_BUF_INIT to i8*), i64 4, i1 false)
  %3 = call i32 @git_futils_mkdir_r(i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0), i32 511)
  %4 = call i32 @cl_git_pass(i32 %3)
  %5 = call i32 @git_path_prettify(%struct.TYPE_5__* %1, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0), i32* null)
  %6 = call i32 @cl_git_pass(i32 %5)
  %7 = load i32, i32* @GIT_OPT_SET_SEARCH_PATH, align 4
  %8 = load i32, i32* @GIT_CONFIG_LEVEL_GLOBAL, align 4
  %9 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %1, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = call i32 @git_libgit2_opts(i32 %7, i32 %8, i32 %10)
  %12 = call i32 @cl_git_pass(i32 %11)
  %13 = call i32 @git_futils_mkdir_r(i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.1, i64 0, i64 0), i32 511)
  %14 = call i32 @cl_git_pass(i32 %13)
  %15 = call i32 @git_path_prettify(%struct.TYPE_5__* %1, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.1, i64 0, i64 0), i32* null)
  %16 = call i32 @cl_git_pass(i32 %15)
  %17 = load i32, i32* @GIT_OPT_SET_SEARCH_PATH, align 4
  %18 = load i32, i32* @GIT_CONFIG_LEVEL_XDG, align 4
  %19 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %1, i32 0, i32 0
  %20 = load i32, i32* %19, align 4
  %21 = call i32 @git_libgit2_opts(i32 %17, i32 %18, i32 %20)
  %22 = call i32 @cl_git_pass(i32 %21)
  %23 = call i32 @git_futils_mkdir_r(i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.2, i64 0, i64 0), i32 511)
  %24 = call i32 @cl_git_pass(i32 %23)
  %25 = call i32 @git_path_prettify(%struct.TYPE_5__* %1, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.2, i64 0, i64 0), i32* null)
  %26 = call i32 @cl_git_pass(i32 %25)
  %27 = load i32, i32* @GIT_OPT_SET_SEARCH_PATH, align 4
  %28 = load i32, i32* @GIT_CONFIG_LEVEL_SYSTEM, align 4
  %29 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %1, i32 0, i32 0
  %30 = load i32, i32* %29, align 4
  %31 = call i32 @git_libgit2_opts(i32 %27, i32 %28, i32 %30)
  %32 = call i32 @cl_git_pass(i32 %31)
  %33 = call i32 @git_buf_dispose(%struct.TYPE_5__* %1)
  ret void
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

declare dso_local i32 @cl_git_pass(i32) #2

declare dso_local i32 @git_futils_mkdir_r(i8*, i32) #2

declare dso_local i32 @git_path_prettify(%struct.TYPE_5__*, i8*, i32*) #2

declare dso_local i32 @git_libgit2_opts(i32, i32, i32) #2

declare dso_local i32 @git_buf_dispose(%struct.TYPE_5__*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
